[package]
name = "innexgo-hours-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
clap = { version = "3.0.0-rc.5", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
mail-service-api = {version = "*", git = "https://github.com/innexgo/mail-service-api", features=["client"]}
auth-service-api = {version = "*", git = "https://github.com/innexgo/auth-service-api", features=["client"]}

innexgo-hours-api = {version = "*", git = "https://github.com/innexgo/innexgo-hours-api"}
tokio-postgres = "0.7.5"
rand = "0.8.4"
base64-url = "1.4.10"
either = "1.6.1"
