[package]
name = "innexgo-hours-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
mail-service-api = {version = "*", git = "https://github.com/innexgo/mail-service-api", features=["client"]}
auth-service-api = {version = "*", git = "https://github.com/innexgo/auth-service-api", features=["client"]}

innexgo-hours-api = {version = "*", git = "https://github.com/innexgo/innexgo-hours-api"}
tokio-postgres = "0.7.7"
rand = "0.8.5"
base64-url = "1.4.13"
either = "1.8.0"
